cabal-version: 2.2

name:                   cache-s3-example
version:                0.6.3.0
synopsis:               Cache S3 Example
description:            Cache S3 Example.
category:               Data
stability:              Experimental
homepage:               http://github.com/haskell-works/cache-s3-example#readme
bug-reports:            https://github.com/haskell-works/cache-s3-example/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2022 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
tested-with:            GHC == 9.0.1, GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/haskell-works/cache-s3-example

flag bounds-checking-enabled
  description:          Enable bmi2 instruction set
  manual:               False
  default:              False

common base                       { build-depends: base                       >= 4.11       && < 5      }

common bytestring                 { build-depends: bytestring                 >= 0.9        && < 0.12   }
common criterion                  { build-depends: criterion                  >= 1.2        && < 1.6    }
common deepseq                    { build-depends: deepseq                    >= 1.4        && < 1.5    }
common directory                  { build-depends: directory                  >= 1.2        && < 1.4    }
common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.19   }
common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
common exceptions                 { build-depends: exceptions                 >= 0.8        && < 0.11   }
common ghc-prim                   { build-depends: ghc-prim                   >= 0.5        && < 0.8    }
common hedgehog                   { build-depends: hedgehog                   >= 1.0        && < 1.1    }
common hspec                      { build-depends: hspec                      >= 2.4        && < 2.9    }
common hw-hspec-hedgehog          { build-depends: hw-hspec-hedgehog          >= 0.1        && < 0.2    }
common mmap                       { build-depends: mmap                       >= 0.5        && < 0.6    }
common QuickCheck                 { build-depends: QuickCheck                 >= 2.10       && < 2.15   }
common semigroups                 { build-depends: semigroups                 >= 0.8.4      && < 0.20   }
common transformers               { build-depends: transformers               >= 0.4        && < 0.7    }
common unliftio-core              { build-depends: unliftio-core              >= 0.1.2.0    && < 0.3    }
common vector                     { build-depends: vector                     >= 0.12       && < 0.13   }

common cache-s3-example
  build-depends:        cache-s3-example

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -O2
  if flag(bounds-checking-enabled)
    cpp-options:        -DBOUNDS_CHECKING_ENABLED

library
  import:               base, config
                      , bytestring
                      , deepseq
                      , ghc-prim
                      , mmap
                      , transformers
                      , unliftio-core
                      , vector
  exposed-modules:      HaskellWorks.S3.Example
  other-modules:        Paths_cache_s3_example
  autogen-modules:      Paths_cache_s3_example
  hs-source-dirs:       src

test-suite cache-s3-example-test
  import:               base, config
                      , QuickCheck
                      , bytestring
                      , directory
                      , exceptions
                      , hedgehog
                      , hspec
                      , hw-hspec-hedgehog
                      , cache-s3-example
                      , mmap
                      , transformers
                      , vector
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:        HaskellWorks.S3.ExampleSpec
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover


test-suite doctest
  import:               base, config
                      , doctest
                      , doctest-discover
                      , cache-s3-example
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  main-is:              DoctestDriver.hs
  HS-Source-Dirs:       doctest
  build-tool-depends:   doctest-discover:doctest-discover
